--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="flex-container">
         <div class="scorecontainer">
-            <h1 id="score-title">Leaderboard</h1>
+            <h1 id="score-title">Pipp0C0ca</h1>
             <table class="altrowstable" id="scoretable" border="1">
                 <thead>
                 <tr>
